--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Food Reviews</title>
+    <title>MeWantFood</title>
   </head>
   <body>
     <div id="root"></div>
